# tensorflow-certificate

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  install_dependencies.sh  pyproject.toml
C1/: C1W1_Assignment.ipynb  C1W2_Assignment.ipynb  C1W3_Assignment.ipynb  C1W4_Assignment.ipynb
C2/W1/assignment/: C2W1_Assignment.ipynb
C3/W1/assignment/: C3W1_Assignment.ipynb
scripts/: 1_1_tf_hello_world.py  1_2_mnist_callback.py  1_3_mnist_conv.py  1_4_happy_sad_conv.py  2_1_2_cats_dogs_conv.py  2_1_cats_dogs_conv.py  3_1_tokenizer.py
